tests/fail/98-fail-unsupported-type.stderr
error: df-derive does not support HashMap
  --> tests/fail/98-fail-unsupported-type.rs:11:15
   |
11 |     metadata: HashMap<String, String>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::core::dataframe::ToDataFrame`
 --> tests/fail/98-fail-unsupported-type.rs:5:5
  |
5 | use crate::core::dataframe::ToDataFrame;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
